<resources>
    <string name="app_name">IShare</string>
    <string name="str_setting">设置</string>
    <string name="str_savefinish">部分设置将在下次服务启动时生效</string>
    <string name="str_start">启动</string>
    <string name="str_hotspot_NotStart">请先开启您的wifi热点后再启动</string>
    <string name="str_noInputPort">请设置端口</string>
    <string name="str_shareFile">选择共享的文件夹</string>
    <string name="str_chooseShareFile">请选择共享的文件或文件夹</string>
    <string name="str_stop">停止</string>
    <string name="str_accessLink">访问链接</string>
    <string name="str_qrCodeTip">也可用浏览器扫描上方的二维码</string>
    <string name="str_startSucess">服务启动成功</string>
    <string name="str_submit">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_loading">加载中</string>
    <string name="selected">已选择</string>
    <string name="str_tip">提示</string>
    <string name="str_exitHttpServerTip">服务已经启动, 退出将关闭, 确定要退出吗?</string>
    <string name="str_hotspotIp">192.168.43.1</string>
    <string name="str_ipAddress">ip地址</string>
    <string name="str_port">端口</string>
    <string name="str_shareApk">共享应用</string>
</resources>
