<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/str_ipAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_ipaddress"
            android:text="@string/str_hotspotIp"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/str_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:id="@+id/et_port"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_shareApk"
            android:text="@string/str_shareApk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/ibtn_shareApk"
            android:src="@drawable/file_apk"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

        <TextView
            android:id="@+id/tv_shareFile"
            android:text="@string/str_shareFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/ibtn_shareFile"
            android:src="@drawable/http"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="32dp"
            android:layout_height="32dp"/>


    </LinearLayout>

    <Button
        android:layout_gravity="end"
        android:padding="5dp"
        android:id="@+id/btn_start"
        android:text="@string/str_start"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_QRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="10dp"
            android:id="@+id/tv_httpStartSucessTip"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>